--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,16 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
     />
+    <style>
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
   </head>
   <body style="overflow: hidden; background-color: rgba(0,0,0,0); margin: 0">
-    <div id="App"></div>
+    <div id="App" style="height: 100%"></div>
   </body>
 
   <script type="text/jsx">
