add settings panel

--- a/src/index.html
+++ b/src/index.html
@@ -18,18 +18,23 @@
   </body>
 
   <script type="text/jsx">
-    import React from 'react';
-    import ReactDOM from 'react-dom';
-    import {AppContainer} from 'react-hot-loader';
+    import React from 'react'
+    import ReactDOM from 'react-dom'
+    import { AppContainer } from 'react-hot-loader'
 
     const render = () => {
-      const App = require('./app').default;
-      ReactDOM.render(<AppContainer><App /></AppContainer>, document.getElementById('App'));
+      const App = require('./app').default
+      ReactDOM.render(
+        <AppContainer>
+          <App />
+        </AppContainer>,
+        document.getElementById('App')
+      )
     }
 
-    render();
+    render()
     if (module.hot) {
-      module.hot.accept(render);
+      module.hot.accept(render)
     }
   </script>
 </html>
